--- a/index.html
+++ b/index.html
@@ -2312,7 +2312,7 @@
                     "url":"https://mplsartsandculture.org/vibrant-storefronts"
                   },
                   {
-                    "accomplishment": "Hennepin Ave reconstruction will be complete November 2025, an Infrastructure project help facilitate."
+                    "accomplishment": "Hennepin Ave reconstruction will be complete November 2025, an infrastructure project Katie helped facilitate."
                   },
                   {
                     "accomplishment": "Last cycle council approved tax increment funding for Doran Construction to build 220 units of housing in part of the 7 points mall.",
