--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cashman Council</title>
+    <title>Katie Cashman City Council Accomplishments</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
@@ -46,8 +46,10 @@
             <div class="container mx-auto px-4 py-6">
                 <div class="flex justify-between items-center">
                     <div class="flex items-center space-x-3">
-                        <img src="https://images.squarespace-cdn.com/content/v1/63e30658e7059222878ca4ec/b1e56df3-99a1-460c-82d2-b63fae2ee4fa/KC+Assets+for+Sean_logo+white+yellow.png?format=1500w" alt="Katie Cashman for Council" style="height:50px" >
-                        <h1 class="text-2xl font-bold">City Council Katie Cashman Resolutions</h1>
+                        <a href="https://www.katieforcouncil.org/">
+                            <img src="https://images.squarespace-cdn.com/content/v1/63e30658e7059222878ca4ec/b1e56df3-99a1-460c-82d2-b63fae2ee4fa/KC+Assets+for+Sean_logo+white+yellow.png?format=1500w" alt="Katie Cashman for Council" style="height:50px" >
+                        </a>
+                        <h1 class="text-2xl font-bold">Katie Cashman City Council Accomplishments</h1>
                     </div>
                 </div>
             </div>
