--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 display: none;
             }
         }
+
+        img{
+            width: auto;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -47,9 +51,10 @@
                 <div class="flex justify-between items-center">
                     <div class="flex items-center space-x-3">
                         <a href="https://www.katieforcouncil.org/">
-                            <img src="https://images.squarespace-cdn.com/content/v1/63e30658e7059222878ca4ec/b1e56df3-99a1-460c-82d2-b63fae2ee4fa/KC+Assets+for+Sean_logo+white+yellow.png?format=1500w" alt="Katie Cashman for Council" style="height:50px" >
+                            <img src="https://images.squarespace-cdn.com/content/v1/63e30658e7059222878ca4ec/b1e56df3-99a1-460c-82d2-b63fae2ee4fa/KC+Assets+for+Sean_logo+white+yellow.png?format=1500w" alt="Katie Cashman for Council" style="max-height:50px" >
                         </a>
-                        <h1 class="text-2xl font-bold">Katie Cashman City Council Accomplishments</h1>
+                        <h1 class="sm-hide text-2xl font-bold">Katie Cashman City Council Accomplishments</h1>
+                        <h1 class="sm-show text-xl font-bold">Katie Cashman Accomplishments</h1>
                     </div>
                 </div>
             </div>
